force-app/main/default/objects/ACCObjTest1__c/ACCObjTest1__c.object-meta.xml
<CustomObject>
    <description>15573434 test111111</description>
    <label>ACCObjTest1</label>
    <nameField>
        <label>ACCObjTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObjTest1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>