force-app/main/default/objects/ACCObjTest1__c/fields/Apr6thpicklist1__c.field-meta.xml
<CustomField>
    <fullName>Apr6thpicklist1__c</fullName>
    <description>test</description>
    <label>Apr6thpicklist1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>111</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>