force-app/main/default/objects/ACCObjTest1__c/fields/Are_you_a_Admin__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you a Admin</label>
    <type>Checkbox</type>
</CustomField>