force-app/main/default/objects/ACCObjTest1__c/fields/N1__c.field-meta.xml
<CustomField>
    <fullName>N1__c</fullName>
    <description>124</description>
    <label>N1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12345</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>