force-app/main/default/objects/ACCObjTest1__c/fields/Pf3__c.field-meta.xml
<CustomField>
    <fullName>Pf3__c</fullName>
    <description>dsfsdfsd</description>
    <label>Pf3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>