force-app/main/default/objects/ACCObjTest1__c/fields/pl1__c.field-meta.xml
<CustomField>
    <fullName>pl1__c</fullName>
    <description>12356</description>
    <label>pl13</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>