force-app/main/default/objects/ACCObjTest1__c/fields/PLnew3__c.field-meta.xml
<CustomField>
    <fullName>PLnew3__c</fullName>
    <description>sd</description>
    <label>PLnew3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>