force-app/main/default/objects/ACCObjTest1__c/fields/PLt1__c.field-meta.xml
<CustomField>
    <fullName>PLt1__c</fullName>
    <description>Test New</description>
    <label>PLt1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>