force-app/main/default/objects/ACCObjTest1__c/fields/Plt3__c.field-meta.xml
<CustomField>
    <fullName>Plt3__c</fullName>
    <description>Add Comment</description>
    <label>Plt3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>latest</fullName>
                <default>true</default>
                <label>latest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>