force-app/main/default/objects/ACCObjTest1__c/recordTypes/SairecordType1.recordType-meta.xml
<RecordType>
    <fullName>SairecordType1</fullName>
    <active>true</active>
    <description>test</description>
    <label>SairecordType1</label>
</RecordType>